# download-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  download.rs  get_links.rs  lib.rs  main.rs  save.rs
src/get_links/: css.rs  html.rs  mod.rs
