[package]
edition = "2021"
name = "web-page-downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
scraper = "0.12.0"
tokio = {version = "1", features = ["full"]}
