[package]
edition = "2021"
name = "web-page-downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = {version = "0.11", features = ["json"]}
scraper = "0.12.0"
tokio = {version = "1", features = ["full"]}
