[package]
edition = "2021"
name = "web_page_downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
itertools = "0.10.3"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = {version = "0.11", features = ["json"]}
scraper = "0.12.0"
tokio = {version = "1", features = ["full"]}
url = "2.2.2"
urlencoding = "2.1.0"
uuid = {version = "0.8.2", features = ["v4"]}
